@@ -5,7 +5,8 @@ Version 0.4.5 (?? ??? ????)
  - Modified CalendarPanel to handle more events per day.  Instead of just not displaying
    events that don't fit, it will now use multiple columns to fit all the day's events.
  - Modified CalendarPanel to not use Swing's internal ToolTip functionality and replaced
-   with custom mouse-over popup displays with a more polished appearance,
+   with custom mouse-over popup displays with a more polished appearance.
+ - Modified CalendarPanel to recognize setFont calls.
 Version 0.4.4 (12 Dec 2007)
  - Fixed generated iCalendar output for RRULEs.  Added simple constructor for
    Rrule class.
